# index-rs

indrex-rs/: Cargo.toml  build_web.sh  readme.md
indrex-rs/index-rs-api/: Cargo.toml
indrex-rs/index-rs-api/src/: index-api.rs
indrex-rs/index-rs-wasm/: Cargo.toml
indrex-rs/index-rs-wasm/src/: lib.rs  main.rs
indrex-rs/static/: index.html  index_rs_wasm.js  index_rs_wasm_bg.wasm
