# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "index-rs-api"
version = "0.1.0"
authors = ["zeleni_kod@proton.me"]
description = "Demo of index-rs"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json","gzip"] }
scraper = "0.14.0"
futures = "0.3.25"
colored = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
itertools = "0.10.5"
rocket = "0.5.0-rc.2"

[[bin]]
name = "indexapi"
path = "src/index-api.rs"
